--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+addict==2.4.0
 alembic==1.7.5
 aniso8601==9.0.1
 bcrypt==3.2.0
+bidict==0.22.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -15,11 +17,13 @@ Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-MySQL==1.5.2
 Flask-RESTful==0.3.9
+Flask-SocketIO==5.3.3
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
+imagekitio==3.0.1
 importlib-metadata==4.11.3
 importlib-resources==5.7.1
 itsdangerous==2.0.1
@@ -28,13 +32,18 @@ Mako==1.1.6
 Markdown==3.4.1
 MarkupSafe==2.0.1
 Pillow==9.0.0
+pycodestyle==2.10.0
 pycparser==2.21
 PyMySQL==1.0.2
 python-dateutil==2.8.2
+python-engineio==4.4.0
+python-socketio==5.8.0
 pytz==2022.1
 requests==2.27.1
+requests-toolbelt==0.9.1
 six==1.16.0
 SQLAlchemy==1.4.29
+tomli==2.0.1
 urllib3==1.26.9
 Werkzeug==2.0.2
 WTForms==3.0.1
