--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.0.3
 colorama==0.4.4
 dnspython==2.2.0
 email-validator==1.1.3
+eventlet==0.33.3
 Flask==2.0.2
 Flask-Admin==1.5.8
 Flask-Bcrypt==0.7.1
